--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Visual Studio Code project files
+.vscode
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -8,8 +11,5 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Output images
+*.jpg
